Fix double scrollbar

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,6 +23,10 @@ a, button:focus, button:active,  {
     outline: 0;
 }
 
+.app-body .main .content {
+    height: calc(100vh - 197px);
+}
+
 .container-fluid > .tabs,
 .container > .tabs {
     margin-bottom: 1.5rem;
